app/assets/stylesheets/application.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";
@import "materialize";

body {
  font-family: "Open Sans", sans-serif !important;
}

.collapsing {
  background-color: white;
  border: 1px solid transparent;
  z-index: 9999999;
}

.collapse.in {
  background-color: white;
  border: 1px solid transparent;
  z-index: 9999999;
}

.caret {
  border-color: transparent !important;
}

.navbar-toggle {
  border: 0px solid transparent !important;
}

header, main, footer {
  padding-left: 150px;
}

@media only screen and (max-width : 992px) {
  header, main, footer {
    padding-left: 0;
  }
}

